--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Tripple A aStonomer</title>
+    <title>Tripple A aStonomer</title>#ffd33d, $bg-
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="yinyangfavico.ico">
   </head>
